# nasoq-benchmarks

./: .gitmodules  CMakeLists.txt  README.md  all.py  all.sh  all_plot.sh  analyze_qp.py  build.sh  make_analysis.sh  output.txt  run_all.sh  run_default.sh  run_job_all.sh  test.sh  tmp.html  try.sh  tune.sh  tune_settings.sh
SMP_Repository_analysis_tables/: Bar2k_QPs_analysis.csv  Beam_QPs_analysis.csv  Elephant_QPs_analysis.csv  Gargoyle2_QPs_analysis.csv  Horse_QPs_analysis.csv  Matt_QPs_analysis.csv  Mpclib_QPs_analysis.csv  SMP_Repository_QPs_analysis.csv  Simulation3D_QPs_analysis.csv  merged_csvs.csv
analysis_tables/: AddingDepth_QPs_analysis.csv  Armadillo_QPs_analysis.csv  Bunny_QPs_analysis.csv  Cube_QPs_analysis.csv  Gargoyle_QPs_analysis.csv  Knight_QPs_analysis.csv  Lamb_QPs_analysis.csv  MarosMeszaros_QPs_analysis.csv  Nail_QPs_analysis.csv  Simulation2D_QPs_analysis.csv  Wolf_QPs_analysis.csv  alligator_QPs_analysis.csv  hand_QPs_analysis.csv  lion_QPs_analysis.csv  woody_QPs_analysis.csv
drivers/: CMakeLists.txt  Eigen_utils.h  driver_utils.h  gurobi.cpp  mosek.cpp  osqp.cpp
drivers/Gurobi/: Gurobi.cpp  Gurobi.h
drivers/Mosek/: QuadProgMosek.cpp  QuadProgMosek.h
logs/: nasoq-custom-e-3.csv  nasoq-custom-e-6.csv  nasoq-fixed-e-3.csv  nasoq-fixed-e-6.csv  nasoq-fixed.csv  nasoq-tuned-e-3.csv  nasoq-tuned-e-6.csv
logs/correct_logs/: gurobi-e-3.csv  gurobi-e-6.csv  gurobi-e-9.csv  mosek-e-3.csv  mosek-e-6.csv  mosek-e-9.csv  nasoq-custom-e-3.csv  nasoq-custom-e-6.csv  nasoq-custom-e-9.csv  nasoq-fixed-e-3.csv  nasoq-fixed-e-6.csv  nasoq-fixed-e-9.csv  nasoq-tuned-e-3.csv  nasoq-tuned-e-6.csv  nasoq-tuned-e-9.csv  osqp-e-3.csv  osqp-e-6.csv  osqp-e-9.csv  osqp-polished-e-3.csv  osqp-polished-e-6.csv  osqp-polished-e-9.csv
logs/perf_data/: nasoq-custom-e-3-AddingDepth.csv  nasoq-custom-e-3-Armadillo.csv  nasoq-custom-e-3-Bar2k.csv  nasoq-custom-e-3-Beam.csv  nasoq-custom-e-3-Bunny.csv  nasoq-custom-e-3-Cube.csv  nasoq-custom-e-3-Elephant.csv  nasoq-custom-e-3-Gargoyle.csv  nasoq-custom-e-3-Gargoyle2.csv  nasoq-custom-e-3-Horse.csv  nasoq-custom-e-3-Knight.csv  nasoq-custom-e-3-Lamb.csv  nasoq-custom-e-3-MarosMeszaros.csv  nasoq-custom-e-3-Matt.csv  nasoq-custom-e-3-Mpclib.csv  nasoq-custom-e-3-Nail.csv  nasoq-custom-e-3-Simulation2D.csv  nasoq-custom-e-3-Simulation3D.csv  nasoq-custom-e-3-Wolf.csv  nasoq-custom-e-3-alligator.csv  nasoq-custom-e-3-hand.csv  nasoq-custom-e-3-lion.csv  nasoq-custom-e-3-non-class.csv  nasoq-custom-e-3-woody.csv  nasoq-custom-e-6-AddingDepth.csv  nasoq-custom-e-6-Armadillo.csv  nasoq-custom-e-6-Bar2k.csv  nasoq-custom-e-6-Beam.csv  nasoq-custom-e-6-Bunny.csv  nasoq-custom-e-6-Cube.csv  nasoq-custom-e-6-Elephant.csv  nasoq-custom-e-6-Gargoyle.csv  nasoq-custom-e-6-Gargoyle2.csv  nasoq-custom-e-6-Horse.csv  nasoq-custom-e-6-Knight.csv  nasoq-custom-e-6-Lamb.csv  nasoq-custom-e-6-MarosMeszaros.csv  nasoq-custom-e-6-Matt.csv  nasoq-custom-e-6-Mpclib.csv  nasoq-custom-e-6-Nail.csv  (+200 more)
logs/perf_data/merge/: nasoq-custom-e-3.csv  nasoq-custom-e-6.csv  nasoq-fixed-e-3.csv  nasoq-fixed-e-6.csv  nasoq-tuned-e-3.csv  nasoq-tuned-e-6.csv  osqp-e-3.csv  osqp-e-6.csv  osqp-polished-e-3.csv  osqp-polished-e-6.csv
scripts/: NASOQ_bench.sh
scripts/python_scripts/: README.md  analyze_qp.py  bin_stat.py  classify_dataset.py  clean_log.py  failure_All_0.001_results.csv  graph_generator.py  organize_smp.py  osqp_utils.py  plot_classification.py  plot_tune.py  results_All_performance_profiles.csv  speedup_All_0.001_results.csv  test_default.py  test_metrics.py  tune.py  tune_settings.py
